<resources>
    <string name="app_name">Avertimed</string>
    <string name="Password">Password</string>
    <string name="facebook_app_id">331181594719928</string>
    <string name="fb_login_protocol_scheme">fb331181594719928</string>
    <string name="take_photo">Take Photo</string>
    <string name="gallery">Gallery</string>
    <string name="select_option">Select Option</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="low_price">Low Price</string>
    <string name="high">High Price</string>
    <string name="filter">Search Filter</string>

    <string name="category">Category</string>
    <string name="change_language">Change Language</string>
    <string name="check_otp">Check OTP</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="input_your_old_password">Input your old password</string>
    <string name="new_password">New Password</string>
    <string name="input_your_new_password">input your new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="input_your_confirm_password">Input your confirm password</string>
    <string name="update">Update</string>
    <string name="favourite">Favourite</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_your_email_address_you_will_nreceive_a_link_to_create_a_new_password_nvia_email">Please enter your email address.You will \nreceive a link to create a new password \nvia email.</string>
    <string name="email_address">Email Address</string>
    <string name="input_your_email_address">Input your email address</string>
    <string name="login">Login</string>
    <string name="input_your_email">Input your Email</string>
    <string name="password">Password</string>
    <string name="input_your_password">Input your password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="manage_order">Manage Order</string>
    <string name="current_order">Current Order</string>
    <string name="past_order">Past Order</string>
    <string name="messages">Messages</string>
    <string name="add_new_card">Add New Card</string>
    <string name="_100_security_nguarantee">100 % Security\nGuarantee</string>
    <string name="you_may_add_visa_mastercard_and_also_we_support_namerican_express_discover_and_jcb">You may add Visa, MasterCard and also we support\nAmerican Express , Discover and JCB</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="valid_until_mm_yy">Valid until(MM/YY)</string>
    <string name="_3_digit_cvv">3-Digit CVV</string>
    <string name="name_of_card">Name of Card</string>
    <string name="total_amount">Total Amount</string>
    <string name="confirm_and_pay">Confirm and Pay</string>
    <string name="place_order">Place Order</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="edit">Edit</string>
    <string name="order_details">Order Details</string>
    <string name="apply">Apply</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="sub_total">Sub Total</string>
    <string name="general_practice">General Practice</string>
    <string name="description">Description</string>
    <string name="recommendation">Recommendation</string>
    <string name="add_to_wishlist">Add to WishList</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="brand_model_product_name">Brand, Model, Product Name</string>
    <string name="categories">Categories</string>
    <string name="show_all">Show All</string>
    <string name="top_trends">Top Trends</string>
    <string name="home">Home</string>
    <string name="transaction">Transaction</string>
    <string name="profile">profile</string>
    <string name="favourites">Favourites</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="request_quotation">Request Quotation</string>
    <string name="help_center">Help Center</string>
    <string name="input_your_last_name">input your last name</string>
    <string name="input_your_country">Input your country</string>
    <string name="state">State</string>
    <string name="input_your_state">Input your state</string>
    <string name="city">City</string>
    <string name="input_your_city">Input your City</string>
    <string name="address">Address</string>
    <string name="input_your_address">Input your address</string>
    <string name="mobile">Mobile</string>
    <string name="input_your_mobile">Input your Mobile</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="request_for_quotation">Request For Quotation</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="phone_no">Phone No</string>
    <string name="enter_your_number">Enter your Number</string>
    <string name="product_category">Product Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="quantity">Quantity</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="no_data_available">No Data Available</string>
    <string name="recent_keyword">Recent Keyword</string>
    <string name="recent_search">Recent Search</string>
    <string name="push_notification">Push Notification</string>
    <string name="setting">Setting</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="enter_your_first_name">Enter your First Name</string>
    <string name="enter_your_last_name">Enter your Last Name</string>
    <string name="address_1">Address 1</string>
    <string name="enter_your_address_1">Enter your Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="enter_your_address_2">Enter your Address 2</string>
    <string name="state_province">State/Province</string>
    <string name="please_select_state_or_province">Please select State or Province</string>
    <string name="country">Country</string>
    <string name="please_select_your_contry">Please select your contry</string>
    <string name="zip_postal_code">Zip/Postal Code</string>
    <string name="please_enter_you_zip_or_postal_code">Please Enter you Zip or Postal Code</string>
    <string name="save">Save</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="input_your_first_name">Input your first name</string>
    <string name="last_name">Last Name</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="currency">Currency</string>
    <string name="your_cart_is_empty">Your cart is empty.</string>
    <string name="your_cart">Your Cart</string>
    <string name="short_by_price">Short By Price</string>
    <string name="low_high">Low - High</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select Sub Category</string>


</resources>