<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left_arrow"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Shipping Address"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/one"
        android:id="@+id/view"
        android:background="@color/gray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/view"
        android:layout_above="@+id/bottom"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_gray_2"
        android:text="@string/first_name"
        android:layout_gravity="center"
        android:gravity="start"
        android:textSize="14dp"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />
        <EditText
            android:id="@+id/sh_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_first_name"
            android:background="@drawable/edit_bg_3"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray_2"
            android:text="@string/last_name"
            android:layout_gravity="center"
            android:gravity="start"
            android:textSize="14dp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp" />
        <EditText
            android:id="@+id/sh_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_last_name"
            android:background="@drawable/edit_bg_3"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:textSize="14dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray_2"
            android:text="@string/address_1"
            android:layout_gravity="center"
            android:gravity="start"
            android:textSize="14dp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp" />
        <EditText
            android:id="@+id/sh_ad1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_address_1"
            android:background="@drawable/edit_bg_3"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:textSize="14dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray_2"
            android:text="@string/address_2"
            android:layout_gravity="center"
            android:gravity="start"
            android:textSize="14dp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp" />
        <EditText
            android:id="@+id/sh_ad2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_address_2"
            android:background="@drawable/edit_bg_3"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray_2"
            android:text="@string/state_province"
            android:layout_gravity="center"
            android:gravity="start"
            android:textSize="14dp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp" />
        <EditText
            android:id="@+id/sh_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_select_state_or_province"
            android:background="@drawable/edit_bg_3"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray_2"
            android:text="@string/country"
            android:layout_gravity="center"
            android:gravity="start"
            android:textSize="14dp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp" />
        <EditText
            android:id="@+id/sh_contry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_select_your_contry"
            android:background="@drawable/edit_bg_3"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray_2"
            android:text="@string/zip_postal_code"
            android:layout_gravity="center"
            android:gravity="start"
            android:textSize="14dp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp" />
        <EditText
            android:id="@+id/sh_pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_you_zip_or_postal_code"
            android:background="@drawable/edit_bg_3"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"/>


    </LinearLayout>


    </ScrollView>
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">




        <TextView
            android:id="@+id/place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="16dp"
            android:textStyle="normal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/edit_bg__blue_qt"
            android:textColor="@color/white"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginRight="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

</RelativeLayout>