<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left_arrow"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/request_for_quotation"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/one"
        android:id="@+id/view"
        android:background="@color/gray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/view"
        android:layout_above="@+id/bottom"
        android:background="@color/white"
        android:windowSoftInputMode="adjustPan|adjustResize"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/name"
                android:textColor="@color/dark_gray_2"
                android:textSize="14dp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                android:background="@drawable/edit_bg_3"
                android:layout_marginTop="5dp"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray_2"
                android:text="@string/email"
                android:layout_gravity="center"
                android:gravity="start"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:background="@drawable/edit_bg_3"
                android:layout_marginTop="5dp"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray_2"
                android:text="@string/phone_no"
                android:layout_gravity="center"
                android:gravity="start"
                android:textSize="14dp"
                android:textStyle="normal"
                android:inputType="number"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp" />
            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_number"
                android:background="@drawable/edit_bg_3"
                android:layout_marginTop="5dp"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray_2"
                android:text="@string/product_category"
                android:layout_gravity="center"
                android:gravity="start"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp" />

            <Spinner
                android:id="@+id/category"
                android:background="@drawable/spinnerstyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray_2"
                android:text="@string/sub_category"
                android:layout_gravity="center"
                android:gravity="start"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp" />

            <Spinner
                android:id="@+id/subcategory"
                android:background="@drawable/spinnerstyle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray_2"
                android:text="@string/quantity"
                android:layout_gravity="center"
                android:gravity="start"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/minus_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/minus_bg"/>


                <EditText
                    android:id="@+id/edt_qt"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/placeorder_bg_qt"
                    android:maxLines="1"
                    android:text="0"
                    android:inputType="numberDecimal"
                    android:textSize="16dp"
                    android:textColor="#282828"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/plus_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/plus_bg"/>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray_2"
                android:text="@string/message"
                android:layout_gravity="center"
                android:gravity="start"
                android:textSize="14dp"
                android:textStyle="normal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />
            <EditText
                android:id="@+id/msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg_3"
                android:layout_marginTop="5dp"
                android:textSize="14dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"/>


            <LinearLayout
                android:id="@+id/bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_alignParentBottom="true">




                <TextView
                    android:id="@+id/place_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="120dp"
                    android:layout_marginRight="120dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_bg__blue_qt"
                    android:textColor="@color/white"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:layout_marginRight="130dp"
                    android:layout_marginLeft="130dp"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimary"/>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>