<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/left_arrow"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/manage_order"
            android:layout_gravity="center"
            android:gravity="left"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/one"
        android:id="@+id/view"
        android:background="@color/gray"/>

    <LinearLayout
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_below="@+id/view">

        <LinearLayout
            android:id="@+id/current"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@color/sky_blue">

            <TextView
                android:id="@+id/txt_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_order"
                android:textSize="15dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_gravity="center"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/past"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@color/white">

            <TextView
                android:id="@+id/txt_past"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/past_order"
                android:textSize="15dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_gravity="center"
                />


        </LinearLayout>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/category_view"
        android:layout_below="@+id/status"
        android:layout_marginTop="10dp"
        android:nestedScrollingEnabled="false"
        android:layout_height="wrap_content"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"/>

</RelativeLayout>